--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,15 +40,17 @@ dependencies:
   pretty_dio_logger: ^1.1.1
   json_annotation: ^3.1.1
   shared_preferences: ^2.0.6
-  equatable: ^1.2.6
+  equatable: ^2.0.0
   flutter_bloc: ^6.1.2
   rxdart: ^0.27.2
   dropdown_search: ^0.6.1
   fluttertoast: ^8.0.8
   intl: ^0.15.7
-  flutter_masked_text: ^0.7.0
   json_serializable: ^3.5.1
   carousel_slider: ^3.0.0
+  fl_chart: ^0.30.0
+  mqtt_client: ^8.2.0
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
